Fix header display on mobile

--- a/brevet/static/brevet/css/base.css
+++ b/brevet/static/brevet/css/base.css
@@ -25,7 +25,6 @@
     padding-bottom: 10px;
   }
 
-
   .header__brand {
     display: block;
     width: 100px;
@@ -33,40 +32,75 @@
     margin-right: 15px;
   }
 
-  
   .header__titles {
     display: block;
     text-decoration: none;
   }
 
+  .header__heading {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height:100px;
+  }
 
-  @media screen and (max-width: 450px){
-      .header__title {
-      font-size: 24px;
-    }
+  .header__title {
+    font-family: 'Russo One', sans-serif;
+    font-size: 32px;
+    line-height: 38.4px;
+    color: #FFF;
+  }
 
-    .header__desc {
-      font-size: 15px;
-      line-height: 24px;
-    }
+  .header__desc {
+    font-family: 'Russo One', sans-serif;
+    height: 30px;
+    font-size: 20px;
+    line-height: 30px;
+    color: #FFF;
   }
 
   .navbar-toggler-icon {
     font-size: 1.0em;
   }
 
+  .nav-item {
+    padding: 8px 0 8px 0;
+    margin: 0;
+    white-space:nowrap;
+    color: rgba(255,255,255);
+  }
+
   .nav-item:not(:last-child) {
     margin-right: 16px;
   }
 
-  
   .nav-link {
+    color: rgba(255,255,255);
     padding: 0;
   }
   
   .navbar-external-user {
     justify-content: flex-end;
   } 
+
+  .cover {
+    display: flex; 
+    flex-direction: column;
+    min-height: 500px;
+    width: 100%;
+    max-width: 1920px;
+    margin: 0 auto;
+    color: #FFF;
+    background-size:cover;
+  }
+
+  .h-cover {
+    font-family: 'Russo One', sans-serif;
+    font-size: 64px;
+    padding: 10px min(10%, 192px);
+    margin-top: auto;
+    margin-bottom: 0;
+  }
 
   .container-body {
     display: block;
@@ -120,6 +154,20 @@
     padding-right: 0px;
   }
 
+  .event__brief{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+  }
+
+  .error_img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    min-width: 280px;
+    width: 40%;
+  }
+
   @media screen and (max-width: 1210px) {
     .nav-item:not(:last-child) {
     margin-right: 8px;
@@ -152,12 +200,6 @@
     }
   }
 
-  .event__brief{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 40px;
-  }
-
   @media screen and (max-width: 992px) {
     .index__next__container {
       display: flex;
@@ -180,11 +222,49 @@
       display: block;
     }
   }
+  
+  @media screen and (max-width: 991px){
+    .h-cover{
+      font-size: 48px;
+    }
 
-  .error_img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    min-width: 280px;
-    width: 40%;
+    .cover {
+      min-height: 300px;
+    }
+  }
+
+  @media screen and (max-width: 575px){
+    .h-cover{
+      font-size: 32px;
+    }
+
+    .cover {
+      min-height: 200px;
+    }
+
+    .header__title {
+      font-size: 28px;
+    }
+
+    .header__desc {
+      font-size: 18px;
+    }
+  }
+
+  @media screen and (max-width: 424px){
+    .h-cover{
+      font-size: 24px;
+    }
+
+    .cover {
+      min-height: 120px;
+    }
+
+    .header__title {
+      font-size: 20px;
+    }
+
+    .header__desc {
+      font-size: 15px;
+    }
   }
